k8s高可用/ingress/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-test   #设置ing名称
  namespace: default   #如果制定了名称空间，那么绑定的service必须在该名称空间下，否则无法访问
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: "1"   #1秒内只允许访问1次，超过则返回503

spec:
  ingressClassName: nginx   #需要添加已存在的ingressclasses
  defaultBackend:   #如果没有匹配的rules规则，那么默认指向defaultBackend配置的service
    service:
      name: nginx-svc
      port:
        number: 80
  rules:
    - host: ingresstest.com   #指定域名
      http:
        paths:
          - path: /test4
            pathType: Prefix
            backend:
              service:
                name: nginx-svc   #指向service服务并且该service在test-ns名称空间下
                port:
                  number: 80   #service内部暴露的端口
